--- a/index.html
+++ b/index.html
@@ -1,12 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Calculadora CmasSeguros</title>
   </head>
   <body>
-    <h1>This is a static template, there is no bundler or bundling involved!</h1>
+    <div class="card_Container">
+      <h3 class="titulo_calculadora">
+        <b>Seguro, te encontramos un seguro! </b>
+      </h3>
+
+      <p class="titulo_card">DATOS DE USUARIO:</p>
+
+      <input
+        type="text"
+        id="name"
+        name="name"
+        class="input_lg"
+        required
+        placeholder="Nombre"
+      />
+      <input
+        type="email"
+        id="mail"
+        name="mail"
+        class="input_lg"
+        required
+        placeholder="correo electrónico"
+      />
+      <div class="card_columns">
+        <input
+          type="text"
+          id="phone"
+          name="phone"
+          class="input_sm"
+          required
+          placeholder="Celular"
+        />
+        <input
+          type="text"
+          id="cp"
+          name="cp"
+          class="input_sm"
+          required
+          placeholder="C.P"
+        />
+      </div>
+      <div class="card_columns">
+        <select name="Estado" id="Estado" class="dropdown_sm">
+          <option value="#">Estado:</option>
+          <option value="#">Opcion1</option>
+          <option value="#">Opcion2</option>
+          <option value="#">Opcion3</option>
+        </select>
+        <select name="Municipio" id="Municipio" class="dropdown_sm">
+          <option value="#">Municipio:</option>
+          <option value="#">Opcion1</option>
+          <option value="#">Opcion2</option>
+          <option value="#">Opcion3</option>
+        </select>
+      </div>
+      <select name="cars_type" id="cars_type" class="dropdown_lg">
+        <option value="#">Tipo de auto:</option>
+        <option value="#">Opcion1</option>
+        <option value="#">Opcion2</option>
+        <option value="#">Opcion3</option>
+      </select>
+      <div class="card_columns">
+        <select name="Marca_auto" id="Marca_auto" class="dropdown_sm">
+          <option value="#">Marcas de vehiculo disponibles:</option>
+          <option value="#">Opcion1</option>
+          <option value="#">Opcion2</option>
+          <option value="#">Opcion3</option>
+        </select>
+        <select name="Submarca" id="Submarca" class="dropdown_sm">
+          <option value="#">Submarca:</option>
+          <option value="#">Opcion1</option>
+          <option value="#">Opcion2</option>
+          <option value="#">Opcion3</option>
+        </select>
+      </div>
+      <select name="modelo" id="modelo" class="dropdown_lg">
+        <option value="#">Año del vehiculo:</option>
+        <option value="#">Opcion1</option>
+        <option value="#">Opcion2</option>
+        <option value="#">Opcion3</option>
+      </select>
+      <select name="Catalogo_coches" id="Catalogo_coches" class="dropdown_lg">
+        <option value="#">Catálogo de vehiculos:</option>
+        <option value="#">Opcion1</option>
+        <option value="#">Opcion2</option>
+        <option value="#">Opcion3</option>
+      </select>
+      <div class="card_columns">
+        <div class="date_card">
+          <label for="start">Inicio vigencia:</label>
+
+          <input
+            type="date"
+            id="start"
+            name="start_date"
+            value="2022-01-01"
+            min="2022-01-01"
+            max="2080-12-31"
+          />
+        </div>
+        <div class="date_card">
+          <label for="start">Fin vigencia:</label>
+
+          <input
+            type="date"
+            id="start"
+            name="end_start"
+            value="2022-01-01"
+            min="2022-01-01"
+            max="2080-12-31"
+          />
+        </div>
+      </div>
+      <div class="card_columns">
+        <div class="check_container">
+          <input type="checkbox" id="MXN" name=" MXN" />
+          <label for="horns">$MXN</label>
+
+          <input type="checkbox" id="MXN" name=" MXN" />
+          <label for="horns">$Dll</label>
+        </div>
+        <div class="btn_container">
+          <button class="btn_check">Cotizar</button>
+        </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
